Archive/effd5fcd7e7463cb69023296c18419d5-61c3814520a8d4318f681038dc4b4da7/output
main.cpp:1:6: error: 'TradeEmpires' has not been declared
 void TradeEmpires::GameServer::join_and_auth_accept_handler(const boost::system::error_code& error,
      ^
main.cpp:1:67: error: 'boost' does not name a type
 void TradeEmpires::GameServer::join_and_auth_accept_handler(const boost::system::error_code& error,
                                                                   ^
main.cpp:1:80: error: expected unqualified-id before '::' token
 void TradeEmpires::GameServer::join_and_auth_accept_handler(const boost::system::error_code& error,
                                                                                ^
main.cpp:1:80: error: expected ')' before '::' token
main.cpp:1:80: error: expected initializer before '::' token
